--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependency Versions -->
-        <selenium.version>4.15.0</selenium.version>
-        <testng.version>7.8.0</testng.version>
-        <rest-assured.version>5.4.0</rest-assured.version>
-        <webdrivermanager.version>5.6.2</webdrivermanager.version>
-        <allure.version>2.25.0</allure.version>
-        <log4j.version>2.22.0</log4j.version>
-        <jackson.version>2.16.0</jackson.version>
+        <selenium.version>4.38.0</selenium.version>
+        <testng.version>7.11.0</testng.version>
+        <rest-assured.version>5.5.6</rest-assured.version>
+        <webdrivermanager.version>6.3.2</webdrivermanager.version>
+        <allure.version>2.29.0</allure.version>
+        <log4j.version>2.25.2</log4j.version>
+        <jackson.version>2.18.2</jackson.version>
     </properties>
 
     <dependencies>
@@ -64,6 +64,14 @@
             <version>${allure.version}</version>
         </dependency>
 
+        <!-- Allure Java Commons -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-java-commons</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
+
+
         <!-- Log4j for Logging -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -90,7 +98,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.13.0</version>
                 <configuration>
                     <source>21</source>
                     <target>21</target>
@@ -101,11 +109,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.5.4</version>
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <systemPropertyVariables>
+                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
 
@@ -113,7 +124,7 @@
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
-                <version>2.12.0</version>
+                <version>2.14.0</version>
                 <configuration>
                     <reportVersion>${allure.version}</reportVersion>
                 </configuration>
