--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
             <version>3.0.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- JSON Schema Validator (Optional) -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
