--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -32,29 +32,14 @@ jobs:
       run: mvn clean test
       continue-on-error: true
 
-    - name: Load test report history
-      uses: actions/checkout@v4
+    - name: Generate Allure Report with Maven
       if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
-
-    - name: Build test report
-      uses: simple-elf/allure-report-action@master
-      if: always()
-      with:
-        allure_results: target/allure-results
-        gh_pages: gh-pages
-        allure_report: allure-report
-        allure_history: allure-history
-        keep_reports: 20
+      run: mvn allure:report
 
     - name: Deploy report to Github Pages
       if: always()
-      uses: peaceiris/actions-gh-pages@v4
+      uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
-        publish_dir: allure-history
-        force_orphan: true
+        publish_dir: target/site/allure-maven-plugin
