refactor: Linus-level flat test structure
- Flatten: ui/, api/, data/, listeners/, utils/
- Move BaseTest to ui/, BaseAPITest to api/
- Move CheckoutTests from e2e/ to ui/
- Rename dataproviders/ to data/
- Update all package declarations and imports
- Update README structure section
- Remove 'What This Demonstrates' section (redundant)

--- a/pom.xml
+++ b/pom.xml
@@ -124,16 +124,15 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
                 <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
+                    <parallel>methods</parallel>
+                    <threadCount>4</threadCount>
                     <systemPropertyVariables>
                         <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                     </systemPropertyVariables>
                     <properties>
                         <property>
                             <name>listener</name>
-                            <value>io.github.aslavchev.listeners.RetryListener</value>
+                            <value>io.qameta.allure.testng.AllureTestNg,io.github.aslavchev.listeners.RetryListener</value>
                         </property>
                     </properties>
                 </configuration>
