Fix: Unique user per thread + eliminate flakiness root causes
PRIMARY FIX - User-per-thread isolation:
- TestConfig: Thread-specific users (EMAIL_1/EMAIL_2)
- Eliminates session/cart conflicts in parallel execution
- No fallback - fail fast if secrets missing (Linus way)
- Workflows: Updated for new credential structure

SUPPORTING FIXES:
- BaseTest: WebDriver quit() timeout handling
- pom.xml: Reduce threads from 4→2 for CI stability
- ProductsPage: Add waits to clickWomenCategory(), openFirstProductDetails()
- ProductDetailsPage: Add wait to isProductDetailsVisible()

Addresses 35% flakiness (8/23 tests):
- CartTests.addMultipleProductsToCart (was 6 retries)
- ProductTests (was 2 retries each)
- LoginTests (was 1 retry)

Root cause: Single user + parallel execution = race conditions
Solution: Dedicated user per thread = test isolation

--- a/.github/workflows/test-automation.yml
+++ b/.github/workflows/test-automation.yml
@@ -25,8 +25,10 @@ jobs:
     - name: Run tests
       run: mvn clean test
       env:
-        TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
-        TEST_USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+        TEST_USER_EMAIL_1: ${{ secrets.TEST_USER_EMAIL_1 }}
+        TEST_USER_PASSWORD_1: ${{ secrets.TEST_USER_PASSWORD_1 }}
+        TEST_USER_EMAIL_2: ${{ secrets.TEST_USER_EMAIL_2 }}
+        TEST_USER_PASSWORD_2: ${{ secrets.TEST_USER_PASSWORD_2 }}
 
     - name: Generate Allure Report
       if: always()
