--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -31,8 +31,10 @@ jobs:
 
     - name: Run tests with ${{matrix.browser}}
       env:
-        TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
-        TEST_USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+        TEST_USER_EMAIL_1: ${{ secrets.TEST_USER_EMAIL_1 }}
+        TEST_USER_PASSWORD_1: ${{ secrets.TEST_USER_PASSWORD_1 }}
+        TEST_USER_EMAIL_2: ${{ secrets.TEST_USER_EMAIL_2 }}
+        TEST_USER_PASSWORD_2: ${{ secrets.TEST_USER_PASSWORD_2 }}
       run: mvn clean test -Dbrowser=${{ matrix.browser }}
       continue-on-error: true
 
